# lgtm

./: .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  codingStandards.md  idea.md
.github/workflows/: lgtm.yml  release.yml
doc/: dogfood_2026-07-11.md  retro_2026-07-11.md  standards-coverage.md
doc/adapters/: codex.md  contract.md
doc/adr/: 0001-rust-single-binary.md  0002-embedded-policy-registry.md  0003-hard-blocking-stop-gate-no-waivers.md  0004-consolidated-mvp-decisions.md  README.md  (+9 more)
examples/python-service/: pyproject.toml
examples/python-service/src/python_service/: __init__.py  pricing.py
examples/python-service/tests/: test_pricing.py
policy/: config-v2.schema.json  org-bundle.schema.json  repository-overlay.schema.json  rule.schema.json  rules.json  semgrep-python.yml  standards-coverage.json  standards-coverage.schema.json
schemas/: adapter.schema.json  enforcement-plan.schema.json  evidence.schema.json  task-context.schema.json
scripts/: install.sh  lgtm-pre-push  test-install.sh
src/: adapter.rs  compile.rs  config_v2.rs  detect.rs  discovery.rs  fsutil.rs  init.rs  lib.rs  main.rs  report.rs  stats.rs  structure.rs  update.rs
tests/: adapter_golden.rs  claims_stop.rs  codex_conformance.rs  codex_contract.rs  codex_e2e.rs  commands.rs  hook_safety.rs  init.rs  m1_e2e.rs  overrides.rs  policy_cli.rs  policy_registry.rs  post_tool_use.rs  pre_tool_use.rs  report.rs  ruff.rs  session_start.rs  stage_gates.rs  stub_behavior.rs  universal_fixture_matrix.rs  user_prompt_submit.rs  waive.rs
(+138 files in other folders)
