[package]
name = "lgtm"
version = "0.1.4"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
jsonschema = { version = "0.47.0", default-features = false }
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
shlex = "1.3.0"
thiserror = "2.0.17"
